# toxtore

./: CMakeLists.txt  LICENSE  README.md  TODO.md  toxtore.pc.in
doc/: toxtore_design.md
include/: toxtore.h
src/: minitox.c  toxtore.c  util.c
